chrome/test/data/purify/unit_tests.exe_UMR.txt
Uninitialized memory read in MOZ_Z_deflate
Error Location
   third_party/zlib/deflate.c:  MOZ_Z_deflate
   third_party/zlib/contrib/minizip/zip.c  zipCloseFileInZipRaw
   third_party/zlib/contrib/minizip/zip.c  zipCloseFileInZip
   chrome/common/zip.cc  AddEntryToZip
   chrome/common/zip.cc  Zip(FilePath const&,FilePath const&)
   chrome/common/zip_unittest.cc  ZipTest_Zip_Test::TestBody(void)
   testing/gtest/src/gtest.cc  testing::Test::Run(void)
   ^^^
Alloc Location
   ...
   third_party/zlib/contrib/minizip/zip.c  zipOpen2
   chrome/common/zip.cc  Zip(FilePath const&,FilePath const&)
   chrome/common/zip_unittest.cc  ZipTest_Zip_Test::TestBody(void)
   testing/gtest/src/gtest.cc  testing::Test::Run(void)
   ^^^
 